Updated pricing language

--- a/themes/dinnerdelights/layout/_partial/services.ejs
+++ b/themes/dinnerdelights/layout/_partial/services.ejs
@@ -23,10 +23,12 @@
                         <div class="price-container">
                             <div class="price">
                                 <div class="price-value">$90</div>
-                                <div>3 servings of 6 meals</div>
+                                <div class="text-sm">per person</div>
+                                <div>3 servings of 6 meals for</div>
                             </div>
                             <div class="price">
                                 <div class="price-value">$180</div>
+                                <div class="text-sm">per person</div>
                                 <div>6 servings of 6 meals</div>
                             </div>
                         </div>
