Added MailChimp signup form. Fixed minor styling issues.

--- a/themes/dinnerdelights/layout/_partial/contact.ejs
+++ b/themes/dinnerdelights/layout/_partial/contact.ejs
@@ -12,24 +12,54 @@
     <section class="contact-container">
         <div class="container">
             <div class="row">
-                <div class="col-xs-12 text-center">
-                    <a href="mailto:andrea@mydinnerdelights.com">
-                        <i class="fa fa-envelope" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;andrea@mydinnerdelights.com
-                    </a>
+                <div class="col-md-6">
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <a href="mailto:andrea@mydinnerdelights.com">
+                                <i class="fa fa-envelope" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;andrea@mydinnerdelights.com
+                            </a>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <a href="tel:+15156355517">
+                                <i class="fa fa-mobile" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;(515) 635-5517
+                            </a>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <a href="https://www.facebook.com/MyDinnerDelights/">
+                                <i class="fa fa-facebook-official" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;facebook.com/MyDinnerDelights/
+                            </a>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-12 text-center">
-                    <a href="tel:+15156355517">
-                        <i class="fa fa-mobile" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;(515) 635-5517
-                    </a>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-12 text-center">
-                    <a href="https://www.facebook.com/MyDinnerDelights/">
-                        <i class="fa fa-facebook-official" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;facebook.com/MyDinnerDelights/
-                    </a>
+                <div class="col-md-6">
+                    <!-- Begin MailChimp Signup Form -->
+                    <!-- <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css"> -->
+                    <div id="mc_embed_signup">
+                        <form action="//mydinnerdelights.us14.list-manage.com/subscribe/post?u=5177ad8cdfc5f7ac669b7fde5&amp;id=552fbf4c81" method="post"
+                            id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank"
+                            novalidate>
+                            <div class="row">
+                                <div class="col-xs-12">
+                                    <div id="mc_embed_signup_scroll" class="form-group">
+                                        <label for="mce-EMAIL">Subscribe to the Dinner Delights newsletter</label>
+                                        <input type="email" value="" name="EMAIL" class="email form-control" id="mce-EMAIL" placeholder="email address" required>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-xs-12">
+                                    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                                    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_5177ad8cdfc5f7ac669b7fde5_552fbf4c81" tabindex="-1" value=""></div>
+                                    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-primary"></div>
+                                </div>
+                            </div>
+                            </form>
+                    </div>
+                    <!--End mc_embed_signup-->
                 </div>
             </div>
         </div>
