--- a/themes/dinnerdelights/layout/_partial/footer.ejs
+++ b/themes/dinnerdelights/layout/_partial/footer.ejs
@@ -1,5 +1,5 @@
     <!-- footer -->
-    <div id="bottom-footer" class="hidden-xs">
+    <div id="bottom-footer">
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
@@ -8,7 +8,7 @@
                     </div>
                 </div>
                 <div class="col-md-8">
-                    <div class="footer-right">
+                    <div class="footer-right visible-md-block visible-lg-block">
                         <ul class="list-unstyled list-inline pull-right">
                             <li><a href="#home">home</a></li>
                             <li><a href="#about">about</a></li>
