Added online party booking and payment

--- a/themes/dinnerdelights/layout/_partial/services.ejs
+++ b/themes/dinnerdelights/layout/_partial/services.ejs
@@ -77,7 +77,7 @@
                 </div>
                 <div class="col-md-5">
                     <div class="service-footer-right">
-                        <a class="btn" href="#contact">SCHEDULE NOW</a>
+                        <a class="btn" href="#contact">CONTACT ME TO SCHEDULE NOW!</a>
                     </div>
                 </div>
             </div>
