--- a/themes/dinnerdelights/layout/index.ejs
+++ b/themes/dinnerdelights/layout/index.ejs
@@ -1,6 +1,8 @@
+<%- partial('_partial/masthead') %>
 <%- partial('_partial/home') %>
 <%- partial('_partial/about') %>
 <%- partial('_partial/services') %>
 <%- partial('_partial/menu') %>
+<%- partial('_partial/joinaparty') %>
 <%- partial('_partial/faq') %>
 <%- partial('_partial/contact') %>
