--- a/themes/dinnerdelights/layout/_partial/footer.ejs
+++ b/themes/dinnerdelights/layout/_partial/footer.ejs
@@ -14,6 +14,7 @@
                             <li><a href="#about">about</a></li>
                             <li><a href="#services">services and pricing</a></li>
                             <li><a href="#menu">menu</a></li>
+                            <li><a href="#join">join a party</a></li>
                             <li><a href="#contact">contact</a></li>
                         </ul>
                     </div>
