--- a/themes/dinnerdelights/layout/_partial/home.ejs
+++ b/themes/dinnerdelights/layout/_partial/home.ejs
@@ -4,7 +4,7 @@
             <img src="/images/breakfast-1620583.jpg" alt="" aria-hidden="true" style="display:none;"/>
             <p>Welcome to nights of</p>
             <h1>Dinner Delights</h1>
-            <p><a class="btn btn-primary btn-lg" href="#contact" role="button">Schedule today!</a></p>
+            <p><a class="btn btn-primary btn-lg" href="#contact" role="button">Contact me to schedule today!</a></p>
         </div>
     </div>
 </section>
