--- a/themes/dinnerdelights/layout/_partial/masthead-secondary.ejs
+++ b/themes/dinnerdelights/layout/_partial/masthead-secondary.ejs
@@ -15,13 +15,13 @@
                     </div>
                     <div class="navbar-collapse collapse" id="ftheme">
                         <ul class="nav navbar-nav navbar-right">
-                            <li><a href="#home">home</a></li>
-                            <li><a href="#about">about</a></li>
-                            <li><a href="#services">services and pricing</a></li>
-                            <li><a href="#menu">menu</a></li>
-                            <li><a href="#join">join a party</a></li>
+                            <li><a href="/#home">home</a></li>
+                            <li><a href="/#about">about</a></li>
+                            <li><a href="/#services">services and pricing</a></li>
+                            <li><a href="/#menu">menu</a></li>
+                            <li><a href="/#join">join a party</a></li>
                             <!--<li><a href="#faq">faq</a></li>-->
-                            <li><a href="#contact">contact</a></li>
+                            <li><a href="/#contact">contact</a></li>
                         </ul>
                     </div>
                 </div>
