--- a/themes/dinnerdelights/layout/index.ejs
+++ b/themes/dinnerdelights/layout/index.ejs
@@ -6,3 +6,4 @@
 <%- partial('_partial/joinaparty') %>
 <%- partial('_partial/faq') %>
 <%- partial('_partial/contact') %>
+<%- partial('_partial/footer', null, {cache: !config.relative_link}) %>
