--- a/themes/dinnerdelights/layout/page.ejs
+++ b/themes/dinnerdelights/layout/page.ejs
@@ -1,2 +1,18 @@
 <%- partial('_partial/masthead-secondary') %>
-<h1><%= page.title %></h1>
+  <div class="container">
+    <h1>
+      <%= page.title %>
+    </h1>
+    <div class="row">
+      <div class="col-xs-12">
+        <% if (page.sectionClass) { %>
+        <section class="<%- page.sectionClass %>">
+        <% } %>
+        <%- page.content %>
+        <% if (page.sectionClass) { %>
+        </section>
+        <% } %>
+      </div>
+    </div>
+  </div>
+  <%- partial('_partial/footer-secondary') %>
