Added Availability page

--- a/themes/dinnerdelights/layout/_partial/footer.ejs
+++ b/themes/dinnerdelights/layout/_partial/footer.ejs
@@ -12,9 +12,10 @@
                         <ul class="list-unstyled list-inline pull-right">
                             <li><a href="#home">home</a></li>
                             <li><a href="#about">about</a></li>
-                            <li><a href="#services">services and pricing</a></li>
+                            <li><a href="#services">services</a></li>
                             <li><a href="#menu">menu</a></li>
                             <li><a href="#join">join a party</a></li>
+                            <li><a href="/Availability/">availability</a></li>
                             <li><a href="#contact">contact</a></li>
                         </ul>
                     </div>
