--- a/themes/dinnerdelights/layout/_partial/masthead-secondary.ejs
+++ b/themes/dinnerdelights/layout/_partial/masthead-secondary.ejs
@@ -17,9 +17,10 @@
                         <ul class="nav navbar-nav navbar-right">
                             <li><a href="/#home">home</a></li>
                             <li><a href="/#about">about</a></li>
-                            <li><a href="/#services">services and pricing</a></li>
+                            <li><a href="/#services">services</a></li>
                             <li><a href="/#menu">menu</a></li>
                             <li><a href="/#join">join a party</a></li>
+                            <li><a href="/Availability/">availability</a></li>
                             <!--<li><a href="#faq">faq</a></li>-->
                             <li><a href="/#contact">contact</a></li>
                         </ul>
