--- a/themes/dinnerdelights/layout/_partial/services.ejs
+++ b/themes/dinnerdelights/layout/_partial/services.ejs
@@ -4,7 +4,7 @@
         <div class="row">
             <div class="col-xs-12 col-md-6 col-md-offset-3">
                 <div class="section-heading">
-                    <h2>services and pricing</h2>
+                    <h2>services</h2>
                 </div>
             </div>
         </div>
