--- a/themes/dinnerdelights/layout/_partial/menu.ejs
+++ b/themes/dinnerdelights/layout/_partial/menu.ejs
@@ -4,7 +4,7 @@
             <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
                 <div class="section-heading">
                     <h2>Menu</h2>
-                    <p>February 2017</p>
+                    <p>March 2017</p>
                 </div>
             </div>
         </div>
@@ -12,41 +12,71 @@
     <section class="menu-container">
         <div class="container">
             <div class="row">
-                <div class="col-sm-6 col-md-4 col-md-offset-2">
+                <div class="col-md-8 col-md-offset-2">
                     <ul>
                         <li>
-                            Monterey Chicken
+                            <strong>French onion soup</strong>
                             <ul>
-                                <li>Cheese, BBQ sauce, and bacon on chicken</li>
+                                <li>Caramelized onions with beef broth and seasonings. Served with croutons and Swiss cheese.</li>
                             </ul>
                         </li>
-                        <li>Brown Sugar Bourbon Chicken</li>
-                        <li>Creole Chicken and Sausage</li>
-                        <li>Sloppy Joes</li>
-                        <li>Ranch Pork Chops and Potatoes</li>
-                        <li>Beef and noodles</li>
-                    </ul>
-                </div>
-                <div class="col-sm-6 col-md-4">
-                    <ul>
                         <li>
-                            Roasted Tomato Soup
+                            <strong>Green Chile Chicken Tacos</strong>
                             <ul>
-                                <li>
-                                    special tools needed – blender or food processor or immersion blender
-                                </li>
+                                <li>Chicken with green chiles, tomatoes and seasonings. Comes with corn tortillas and cheese.
+                                    Delicious in tacos, nachos or a salad!</li>
                             </ul>
                         </li>
-                        <li>Mozzarella Stuffed Turkey Pesto Meatballs</li>
                         <li>
-                            Hot Italian Sandwiches
+                            <strong>Ham, Chicken, and Swiss Sandwiches</strong>
                             <ul>
-                                <li>
-                                    pepperoni, salami, ham, mozzarella, provolone
-                                </li>
+                                <li>Tasty sandwiches served with a quick sautéed sugar snap peas.</li>
                             </ul>
                         </li>
-                        <li>Bacon Cheddar turnovers</li>
+                        <li>
+                            <strong>Chicken Tikka Masala</strong>
+                            <ul>
+                                <li>Seasoned chicken in a creamy tomato sauce served with rice.</li>
+                            </ul>
+                        </li>
+                        <li>
+                            <strong>Hot Sausage Sandwiches</strong>
+                            <ul>
+                                <li>Italian sausage in a tomato sauce served with buns, mozzarella cheese and veggies. You control
+                                    the heat!</li>
+                            </ul>
+                        </li>
+                        <li>
+                            <strong>Ham and Broccoli Strata</strong>
+                            <ul>
+                                <li>Layers of croissants, ham, broccoli, and cheddar. Great for breakfast or breakfast for dinner!</li>
+                            </ul>
+                        </li>
+                        <li>
+                            <strong>Bacon wrapped pork chops</strong>
+                            <ul>
+                                <li>As good as it sounds! Served with creamed corn.</li>
+                            </ul>
+                        </li>
+                        <li>
+                            <strong>Spaghetti Stuffed Meatball</strong>
+                            <ul>
+                                <li>Spaghetti inside a meatball. A fun twist on a classic. Served with bread and veggies.</li>
+                            </ul>
+                        </li>
+                        <li>
+                            <strong>Lomo Saltado</strong>
+                            <ul>
+                                <li>Peruvian beef, pepper, onion, and potato stir fry. Served with rice. One of my personal favorites!</li>
+                            </ul>
+                        </li>
+                        <li>
+                            <strong>Cheeseburger Gnocchi</strong>
+                            <ul>
+                                <li>Cheeseburger pasta with potato dumplings. The best parts of a burger and fries without the
+                                    bun!</li>
+                            </ul>
+                        </li>
                     </ul>
                 </div>
             </div>
