Minor March 2017 menu fix

--- a/themes/dinnerdelights/layout/_partial/menu.ejs
+++ b/themes/dinnerdelights/layout/_partial/menu.ejs
@@ -30,7 +30,7 @@
                         <li>
                             <strong>Ham, Chicken, and Swiss Sandwiches</strong>
                             <ul>
-                                <li>Tasty sandwiches served with a quick sautéed sugar snap peas.</li>
+                                <li>Tasty sandwiches served with sautéed sugar snap peas.</li>
                             </ul>
                         </li>
                         <li>
