--- a/themes/dinnerdelights/layout/_partial/menu.ejs
+++ b/themes/dinnerdelights/layout/_partial/menu.ejs
@@ -4,7 +4,7 @@
             <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
                 <div class="section-heading">
                     <h2>Menu</h2>
-                    <p>March 2017</p>
+                    <p>April 2017</p>
                 </div>
             </div>
         </div>
@@ -15,66 +15,63 @@
                 <div class="col-md-8 col-md-offset-2">
                     <ul>
                         <li>
-                            <strong>French onion soup</strong>
+                            <strong>Chicken Flautas</strong>
                             <ul>
-                                <li>Caramelized onions with beef broth and seasonings. Served with croutons and Swiss cheese.</li>
+                                <li>Cheesy, seasoned chicken wrapped in flour tortillas and baked or fried. (Crockpot then baked or fried)</li>
                             </ul>
                         </li>
                         <li>
-                            <strong>Green Chile Chicken Tacos</strong>
+                            <strong>Cheesy Chicken and Rice</strong>
                             <ul>
-                                <li>Chicken with green chiles, tomatoes and seasonings. Comes with corn tortillas and cheese.
-                                    Delicious in tacos, nachos or a salad!</li>
+                                <li>Delicious chicken, veggie and rice dish. A one pot dish that covers all the bases! (Stovetop)</li>
                             </ul>
                         </li>
                         <li>
-                            <strong>Ham, Chicken, and Swiss Sandwiches</strong>
+                            <strong>Red Pepper Chicken</strong>
                             <ul>
-                                <li>Tasty sandwiches served with sautéed sugar snap peas.</li>
+                                <li>Garlicky chicken and veggies cooked all day in the crockpot. Your house will smell great! Served with brown rice and veggies. Also good on nachos. (Crockpot)</li>
                             </ul>
                         </li>
                         <li>
-                            <strong>Chicken Tikka Masala</strong>
+                            <strong>Honey Soy Pork</strong>
                             <ul>
-                                <li>Seasoned chicken in a creamy tomato sauce served with rice.</li>
+                                <li>Fall-apart pork loin marinated in honey, soy, and seasonings. Served with buttered noodles and veggies. (Crockpot)</li>
                             </ul>
                         </li>
                         <li>
-                            <strong>Hot Sausage Sandwiches</strong>
+                            <strong>Pork Chops alla Pizzaiola</strong>
                             <ul>
-                                <li>Italian sausage in a tomato sauce served with buns, mozzarella cheese and veggies. You control
-                                    the heat!</li>
+                                <li>Pork chops in a quick tomato sauce. Great for a quick dinner. Served with veggies.  (Stovetop)</li>
                             </ul>
                         </li>
                         <li>
-                            <strong>Ham and Broccoli Strata</strong>
+                            <strong>Buffalo Pork Chops</strong>
                             <ul>
-                                <li>Layers of croissants, ham, broccoli, and cheddar. Great for breakfast or breakfast for dinner!</li>
+                                <li>Pork chops marinated in buffalo sauce. Quick cooked and topped with sautéed carrots, celery, onions and provolone. (Stovetop)</li>
                             </ul>
                         </li>
                         <li>
-                            <strong>Bacon wrapped pork chops</strong>
+                            <strong>Baked Tacos</strong>
                             <ul>
-                                <li>As good as it sounds! Served with creamed corn.</li>
+                                <li>Tasty twist on tacos. Beef seasoned with homemade taco seasoning. Fill the shells, top with cheese, and bake until melty good. (Stovetop then baked)</li>
                             </ul>
                         </li>
                         <li>
-                            <strong>Spaghetti Stuffed Meatball</strong>
+                            <strong>Pizza Burgers</strong>
                             <ul>
-                                <li>Spaghetti inside a meatball. A fun twist on a classic. Served with bread and veggies.</li>
+                                <li>Homemade burgers that are good either grilled or pan cooked. Topped with mozzarella, pepperoni, and marinara. Comes with buns and veggies. (Grilled or stovetop)</li>
                             </ul>
                         </li>
                         <li>
-                            <strong>Lomo Saltado</strong>
+                            <strong>Sriracha and Cheddar Juicy Lucy</strong>
                             <ul>
-                                <li>Peruvian beef, pepper, onion, and potato stir fry. Served with rice. One of my personal favorites!</li>
+                                <li>Cheddar stuffed burgers with a little (optional) kick. Comes with buns and veggies. (Grilled or stovetop)</li>
                             </ul>
                         </li>
                         <li>
-                            <strong>Cheeseburger Gnocchi</strong>
+                            <strong>Sausage and Pepper Hash</strong>
                             <ul>
-                                <li>Cheeseburger pasta with potato dumplings. The best parts of a burger and fries without the
-                                    bun!</li>
+                                <li>Another breakfast for dinner favorite! Potatoes, veggies and sausage cooked together. Even better with a fried egg on top! (Stovetop)</li>
                             </ul>
                         </li>
                     </ul>
