Updated pictures from photo shoot

--- a/themes/dinnerdelights/layout/_partial/about.ejs
+++ b/themes/dinnerdelights/layout/_partial/about.ejs
@@ -12,7 +12,7 @@
     </div>
     <div class="container about-content">
             <div class="headshot">
-                <img src="/images/headshot.jpg" alt="Andrea" class="img-responsive"/>
+                <img src="/images/DSC_0162-1.jpg" alt="Andrea" class="img-responsive"/>
             </div>
             <div class="text">
                 <p>We are all busy all the time but we still need to eat. Dinner Delights offers personal chef services from
