--- a/themes/dinnerdelights/layout/_partial/home.ejs
+++ b/themes/dinnerdelights/layout/_partial/home.ejs
@@ -1,7 +1,7 @@
 <section class="feature-image">
     <div class="jumbotron">
         <div class="container">
-            <img src="/images/breakfast-1620583.jpg" alt="" aria-hidden="true" style="display:none;"/>
+            <img src="/images/DSC_0033-16.jpg" alt="" aria-hidden="true" style="display:none;"/>
             <p>Welcome to nights of</p>
             <h1>Dinner Delights</h1>
             <p><a class="btn btn-primary btn-lg" href="#contact" role="button">Contact me to schedule today!</a></p>
