--- a/themes/dinnerdelights/layout/_partial/menu.ejs
+++ b/themes/dinnerdelights/layout/_partial/menu.ejs
@@ -4,7 +4,7 @@
             <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
                 <div class="section-heading">
                     <h2>Menu</h2>
-                    <p>April 2017</p>
+                    <p>May 2017</p>
                 </div>
             </div>
         </div>
@@ -15,66 +15,75 @@
                 <div class="col-md-8 col-md-offset-2">
                     <ul>
                         <li>
-                            <strong>Chicken Flautas</strong>
+                            <strong>Grilled Southwestern Pork Chops with Honey Lime Sweet Potatoes</strong>
                             <ul>
-                                <li>Cheesy, seasoned chicken wrapped in flour tortillas and baked or fried. (Crockpot then baked or fried)</li>
+                                <li>Juicy, seasoned pork chops and sweet potatoes tossed with honey lime sauce. A great new way
+                                    to try sweet potatoes. (Grilled)</li>
                             </ul>
                         </li>
                         <li>
-                            <strong>Cheesy Chicken and Rice</strong>
+                            <strong>Cilantro Grilled Chicken</strong>
                             <ul>
-                                <li>Delicious chicken, veggie and rice dish. A one pot dish that covers all the bases! (Stovetop)</li>
+                                <li>Grilled chicken topped with seasoned butter. Served with veggies. (Grilled)</li>
                             </ul>
                         </li>
                         <li>
-                            <strong>Red Pepper Chicken</strong>
+                            <strong>Asparagus Stuffed Chicken</strong>
                             <ul>
-                                <li>Garlicky chicken and veggies cooked all day in the crockpot. Your house will smell great! Served with brown rice and veggies. Also good on nachos. (Crockpot)</li>
+                                <li>Chicken breast seasoned and stuffed with provolone and asparagus. Served with veggies. (Grilled
+                                    or Stovetop)</li>
                             </ul>
                         </li>
                         <li>
-                            <strong>Honey Soy Pork</strong>
+                            <strong>BBQ Baby Back Ribs</strong>
                             <ul>
-                                <li>Fall-apart pork loin marinated in honey, soy, and seasonings. Served with buttered noodles and veggies. (Crockpot)</li>
+                                <li>Delicious slow cooked ribs. Perfect for your next BBQ! Served with veggies and corn bread.
+                                    (Crockpot then grill or bake)</li>
                             </ul>
                         </li>
                         <li>
-                            <strong>Pork Chops alla Pizzaiola</strong>
+                            <strong>Chicken Burrito Bowls</strong>
                             <ul>
-                                <li>Pork chops in a quick tomato sauce. Great for a quick dinner. Served with veggies.  (Stovetop)</li>
+                                <li>Tasty chicken and veggies over rice. Served with cheese. (Crockpot)</li>
                             </ul>
                         </li>
                         <li>
-                            <strong>Buffalo Pork Chops</strong>
+                            <strong>Teriyaki Burger</strong>
                             <ul>
-                                <li>Pork chops marinated in buffalo sauce. Quick cooked and topped with sautéed carrots, celery, onions and provolone. (Stovetop)</li>
+                                <li>Beef burger with seasonings and teriyaki sauce. Topped with grilled pineapple and swiss cheese.
+                                    Served with bun and veggies. (Grill)</li>
+                            </ul>
+                        </li
+                        <li>
+                            <strong>Bacon Cheddar Burger</strong>
+                            <ul>
+                                <li>Beef burger mixed with bacon and cheddar. Served with bun and veggies. (Grill)</li>
                             </ul>
                         </li>
                         <li>
-                            <strong>Baked Tacos</strong>
+                            <strong>Hawaiian Pork</strong>
                             <ul>
-                                <li>Tasty twist on tacos. Beef seasoned with homemade taco seasoning. Fill the shells, top with cheese, and bake until melty good. (Stovetop then baked)</li>
+                                <li>Marinated pork and pineapple served over brown rice. (Crockpot)</li>
                             </ul>
                         </li>
                         <li>
-                            <strong>Pizza Burgers</strong>
+                            <strong>Italian Pork Roast</strong>
                             <ul>
-                                <li>Homemade burgers that are good either grilled or pan cooked. Topped with mozzarella, pepperoni, and marinara. Comes with buns and veggies. (Grilled or stovetop)</li>
+                                <li>Pork roast slow cooked with herbs and tomatoes. Smells amazing and tastes great! Served with
+                                    spaghetti and green beans. (Crockpot)</li>
                             </ul>
                         </li>
                         <li>
-                            <strong>Sriracha and Cheddar Juicy Lucy</strong>
+                            <strong>Crustless Bacon Swiss Quiche</strong>
                             <ul>
-                                <li>Cheddar stuffed burgers with a little (optional) kick. Comes with buns and veggies. (Grilled or stovetop)</li>
-                            </ul>
-                        </li>
-                        <li>
-                            <strong>Sausage and Pepper Hash</strong>
-                            <ul>
-                                <li>Another breakfast for dinner favorite! Potatoes, veggies and sausage cooked together. Even better with a fried egg on top! (Stovetop)</li>
+                                <li>Flavorful quiche served with veggies. A way great to start or end your day! (Baked)</li>
                             </ul>
                         </li>
                     </ul>
+                    <h3 class="monthly-menu-header text-center">Gifts in a Jar!</h3>
+                    <h4 class="monthly-menu-header text-center">$7 each</h4> 
+                    <p class="text-center">Pick from Brownies, Reese’s peanut butter cookie, and/or S’more bars. Great
+                        client, teacher, or hostess gifts!</p>
                 </div>
             </div>
         </div>
