--- a/themes/dinnerdelights/layout/_partial/services.ejs
+++ b/themes/dinnerdelights/layout/_partial/services.ejs
@@ -24,7 +24,7 @@
                             <div class="price">
                                 <div class="price-value">$90</div>
                                 <div class="text-sm">per person</div>
-                                <div>3 servings of 6 meals for</div>
+                                <div>3 servings of 6 meals</div>
                             </div>
                             <div class="price">
                                 <div class="price-value">$180</div>
